# slm_data_generation_service

./: .dockerignore  .env.example  Dockerfile  README.md  REFACTORING_SUMMARY.md  gradio_app.py  inspect_ultradata.py  main.py  pyproject.toml  test_app_startup.py  test_e2e_api_full.py  test_e2e_generation.py  test_gradio_logic.py  test_hf_clone_logic.py  test_hf_multiselect.py  test_new_features.py  test_ws_logging.py  tokens.db
app/: main.py
app/api/: router.py
app/api/endpoints/: finetuning.py  generation.py  tokens.py
app/core/: config.py  logging_utils.py  token_manager.py
app/schemas/: finetuning.py  qa.py
app/services/: agent_generator.py  aisheets_generator.py  data_generator.py  finetuning_generator.py  generative_modifier.py  gradio_service.py  hf_service.py  llm_provider.py  quality_control.py  text_extractor.py
app/utils/: exceptions.py
tests/: test_agent.py  test_api.py  test_extraction.py  test_finetuning.py  test_generative_mod.py  test_hf_service.py
