[project]
name = "slm-data-generation-service"
version = "0.1.0"
description = "A service to generate high-quality synthetic data for SLMs training and fine-tuning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "websockets",
    "gradio",
    # --- Text Extraction ---
    "pypdf",
    "python-docx",
    # --- LangChain and LLM Providers (Pinned for stability) ---
    "langchain==0.2.16",
    "langchain-community==0.2.17",
    "langchain-core==0.2.43",
    "langchain-groq==0.1.10",
    "langchain-openai==0.1.25",
    "langchain-google-genai==1.0.10",
    "langchain-huggingface==0.0.3",
    # --- For local HF models ---
    "transformers",
    "torch",
    "sentence-transformers",
    # --- Text splitting ---
    "langchain-text-splitters==0.2.4",
    "docx>=0.2.4",
    "datasets",
    "rich",
    "typer",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio",
    "pytest-mock"
]
