[project]
name = "slm-data-generation-service"
version = "0.1.0"
description = "A service to generate high-quality synthetic data for SLMs training and fine-tuning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "websockets",
    "gradio",
    # --- Text Extraction ---
    "pypdf",
    "python-docx",
    # --- LangChain Ecosystem (Using version 1.2.9 as requested) ---
    "langchain==1.2.9",
    "langchain-groq",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-huggingface",
    # --- RAG ---
    "chromadb",
    "sentence-transformers",
    "tokenizers>=0.22.0",
    # --- For local HF models ---
    "transformers",
    "torch",
    # --- Text splitting ---
    "langchain-text-splitters",
    "docx>=0.2.4",
    "datasets",
    "rich",
    "typer",
    "pytest>=9.0.2",
    "langchain-chroma>=1.1.0",
    "pytest-asyncio>=1.3.0",
    "anyio>=4.10.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "pytest-asyncio",
    "pytest-mock"
]
